Project pages first cut

--- a/public/assets/custom/css/style.css
+++ b/public/assets/custom/css/style.css
@@ -182,7 +182,7 @@
   top: 0;
   left: 0;
   background-color: #e8e8e8;
-  background: url("../images/section-bg01.jpg") no-repeat center center;
+  background: url("/images/ship-bow.jpg") no-repeat center center;
   background-size: cover;
   will-change: transform;
   z-index: -1;
