--- a/public/assets/custom/scss/style.scss
+++ b/public/assets/custom/scss/style.scss
@@ -298,7 +298,7 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../images/section-bg01.jpg") no-repeat center center;
+    background: url("../../../images/ship-bow.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
