--- a/views/index.ejs
+++ b/views/index.ejs
@@ -262,44 +262,15 @@
               <li><a href="#portfolio">Portfolio</a>
                 <div class="mobnav-subarrow"></div>
                 <ul class="submenu">
-                  <li><a href="clarksons.html">Clarksons</a>
-                    <ul class="submenu">
-                      <li><a href="cruk.html">Arc</a></li>
-                      <li><a href="betclearer.html"></a></li>
-                    </ul>
-                  </li>
-                  <li><a href="portfolio-3-col-caption.html">Cancer Research UK</a>
-                    <ul class="submenu">
-                      <li><a href="portfolio-3-col.html">Stratified Medicine</a></li>
-                      <li><a href="portfolio-3-col-nogutter.html">Prototyping and R&D</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="portfolio-2-col-caption.html">BetClearer</a>
-                    <ul class="submenu">
-                      <li><a href="portfolio-2-col.html">Bento</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="portfolio-item.html">SIS</a>
-                    <ul class="submenu">
-                      <li>SIS Editor</li>
-                    </ul>
-                  </li>
+                  <li><a href="/arc">Arc</a></li>
+                  <li><a href="/stratmed">StratMed</a></li>
+                  <li><a href="/bento">Bento</a></li>
+                  <li><a href="/siseditor">Editor</a></li>
+                  <li><a href="/website">Website</a></li>
+                  <li><a href="/nodetracker">Tracker</a></li>
                 </ul>
               </li>
-              <li><a href="#contact">Contact</a></li>
-              <!--li><a href="#"><i class="fa fa-search"></i></a>
-                 <div class="mobnav-subarrow"></div>
-                 <ul class="submenu search-panel">
-                    <li class="">
-                       <form class="form-inline" role="form">
-                          <div class="form-group">
-                             <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Search">
-                             <button type="submit" class="btn btn-default">Ok</button>
-                          </div>
-                       </form>
-                    </li>
-                 </ul>
-              </li-->
+              <li><a href="/#about">Contact</a></li>
             </ul>
 
           </nav>
@@ -430,21 +401,23 @@
 
   <!--  Portfolio Block  -->
   <div class="portfolio-hp e-block e-block-centered e-bg-skin">
-
     <h2 class="font-accident-one-bold uppercase white wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">Portfolio</h2>
-    <div class="dividewhite2"></div>
+    <div class="dividewhite2"><a name="portfolio"></a></div>
     <p class=" wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-      Customize your website as you want using different colors and 100% free fonts. Build it from pieces and blocks as simple as Lego. <br>
-      Electronic Website Template is fully responsive, looks and works perfect on any device.
+      Here is just a snapshot of what I've been working on the past few years.  <br/>
+        I'm a full stack SPA engineer using bootstrap to speed up CSS development.</br>
+        For many years I have used .Net (Mvc / Web API) & ORM's for the middle and back <br/>
+        but more recently I have been veering off in the world of the M.E.A.N stack.
     </p>
     <div class="dividewhite2"></div>
 
     <div id="isotope-filters" class="port-filter block-centered wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
       <ul>
         <li><a href="#cat1" data-filter="*">All</a></li>
-        <li><a href="#cat2" data-filter=".web">Web Design</a></li>
-        <li><a href="#cat3" data-filter=".marketing">Online Marketing</a></li>
-        <li><a href="#cat4" data-filter=".seo">SEO</a></li>
+        <li><a href="#cat2" data-filter=".net">.Net</a></li>
+        <li><a href="#cat3" data-filter=".nodejs">Node</a></li>
+        <li><a href="#cat4" data-filter=".bootstrap">Bootstrap</a></li>
+        <li><a href="#cat5" data-filter=".angular">Angular</a></li>
       </ul>
     </div>
 
@@ -453,88 +426,127 @@
     <div class="container isotope-container">
 
       <div id="posts" class="row">
-
-        <div id="1" class="item web seo col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/01.jpg" alt="img11"/>
+        <div id="1" class="item net bootstrap angular col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/ship-bow.jpg" alt="img11"/>
               <figcaption>
-                <h3>Music <span>Sounds</span></h3>
-                <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                <a href="portfolio-item.html">View more</a>
+                  <a href="/arc">View more</a>
               </figcaption>
             </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/arc">Clarkson | Arc</a></h4>
+                  <p>Voyage estimation and fixture management for brokering</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  Sept 2015</p>
+                      <p><span class="icon-tag"></span> .Net | Bootstrap | AngularJS</p>
+                  </div>
+              </div>
           </div>
         </div>
 
-        <div id="2" class="item web seo col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/02.jpg" alt="img03"/>
+        <div id="2" class="item net bootstrap angular col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/double-helex.jpg" alt="img03"/>
               <figcaption>
-                <h3>Fire <span>Burns</span></h3>
-                <p>Red Rosa may refer to: Inga bella is a species of legume</p>
                 <a href="portfolio-item.html">View more</a>
               </figcaption>
             </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="#">CRUK | StratMed</a></h4>
+                  <p>Gene matching software for clinical trials</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  May 2014</p>
+                      <p><span class="icon-tag"></span> .Net | Bootstrap | AngularJS</p>
+                  </div>
+              </div>
           </div>
         </div>
-        <div id="3" class="item marketing col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/03.jpg" alt="img11"/>
+        <div id="3" class="item net bootstrap angular col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/dogs.jpg" alt="img11"/>
               <figcaption>
-                <h3>Ice <span>Cold</span></h3>
-                <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
                 <a href="portfolio-item.html">View more</a>
               </figcaption>
             </figure>
-          </div>
-        </div>
-
-        <div id="4" class="item marketing col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/04.jpg" alt="img03"/>
-              <figcaption>
-                <h3>Everybody <span>Lies</span></h3>
-                <p>His repertoire was broad and diverse for a pianist of his age</p>
-                <a href="portfolio-item.html">View more</a>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-
-        <div id="5" class="item web seo col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/05.jpg" alt="img11"/>
-              <figcaption>
-                <h3>More <span>Words</span></h3>
-                <p>He collaborated with such conductors as Claudio Abbado</p>
-                <a href="portfolio-item.html">View more</a>
-              </figcaption>
-            </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="#">BetClearer | Bento</a></h4>
+                  <p>Betting brokage platform for spread betting</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  Nov 2013</p>
+                      <p><span class="icon-tag"></span> .Net | Bootstrap | AngularJS</p>
+                  </div>
+              </div>
           </div>
         </div>
 
-        <div id="6" class="item marketing col-md-4 nopadding wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
-          <div class="item-wrap nopadding">
-            <figure class="effect-goliath">
-              <img src="/assets/custom/images/magazine/06.jpg" alt="img03"/>
+        <div id="4" class="item net col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/racing-horse.jpg" alt="img03"/>
               <figcaption>
-                <h3>Birds <span>Flying</span></h3>
-                <p>Ciani was killed in a road accident in Rome at the age of 32</p>
                 <a href="portfolio-item.html">View more</a>
               </figcaption>
             </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="#">SIS | Editor</a></h4>
+                  <p>Betting feed manipulator for Dog and horse racing</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  Nov 2013</p>
+                      <p><span class="icon-tag"></span> .Net | Bootstrap | AngularJS</p>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <div id="5" class="item nodejs bootstrap col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/webenabled-site.jpg" alt="img11"/>
+              <figcaption>
+                  <a href="portfolio-item.html">View more</a>
+              </figcaption>
+            </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="#">WebEnabled | Website</a></h4>
+                  <p>This website and how it was built</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  Sept 2015</p>
+                      <p><span class="icon-tag"></span> NodeJS | Bootstrap</p>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <div id="6" class="item nodejs bootstrap angular col-md-4 wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+          <div class="item-wrap">
+            <figure class="effect-goliath captions">
+              <img src="/images/node-tracker-logo.jpg" alt="img03"/>
+              <figcaption>
+                <a href="portfolio-item.html">View more</a>
+              </figcaption>
+            </figure>
+              <div class="portfolio-caption">
+                  <h4 class="font-accident-one-normal uppercase"><a hred="#">Node | Tracker</a></h4>
+                  <p>Marine mammal tracking platform</p>
+                  <div class="dividewhite1"></div>
+                  <div class="portfolio-date">
+                      <p><span class="icon-clock"></span>  pre alpha release</p>
+                      <p><span class="icon-tag"></span> NodeJS | Bootstrap | AngularJS</p>
+                  </div>
+              </div>
           </div>
         </div>
 
       </div>
 
-      <div class="dividewhite6"></div>
-      <a role="button" href="portfolio-3-col-caption.html" class="btn btn-default btn-lgr-str wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">Want to See More?</a>
 
     </div>
   </div>
@@ -624,8 +636,8 @@
       </div>
     </div>
   </div>
+    </div>
   <!-- /Details Block -->
-</div>
 
 <!-- Google Map -->
 <a class="gm-toggle-link">
