--- a/views/arc.ejs
+++ b/views/arc.ejs
@@ -201,58 +201,55 @@
           <div class="dividewhite3"></div>
 
           <div id="posts" class="row">
-
             <div id="1" class="item web col-md-3 nopadding">
               <div class="item-wrap">
                 <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
+                  <img src="/images/ship-bow.jpg" alt="img03"/>
                   <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
+                      <h3>Clarksons | <span>Arc</span></h3>
+                      <p>Voyage estimation and fixture management for brokering</p>
+                      <a href="/arc">View more</a>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+            <div id="2" class="item marketing col-md-3 nopadding">
+              <div class="item-wrap">
+                <figure class="effect-goliath">
+                  <img src="/images/double-helex.jpg" alt="img11"/>
+                  <figcaption>
+                    <h3>CRUK | <span>StratMed</span></h3>
+                      <p>Gene matching software for clinical trials</p>
+                    <a href="/stratMed">View more</a>
                   </figcaption>
                 </figure>
               </div>
             </div>
 
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
             <div id="3" class="item marketing col-md-3 nopadding">
               <div class="item-wrap">
                 <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
+                  <img src="/images/dogs.jpg" alt="img03"/>
                   <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
+                    <h3>BetClearer | <span>Bento</span></h3>
+                      <p>Betting brokage platform for spread betting</p>
+                    <a href="/bento">View more</a>
                   </figcaption>
                 </figure>
               </div>
             </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
+              <div id="4" class="item web col-md-3 nopadding">
+                  <div class="item-wrap">
+                      <figure class="effect-goliath">
+                          <img src="/images/racing-horse.jpg" alt="img11"/>
+                          <figcaption>
+                              <h3>SIS | <span>Editor</span></h3>
+                              <p>Betting feed manipulator for Dog and horse racing</p>
+                              <a href="/siseditor">View more</a>
+                          </figcaption>
+                      </figure>
+                  </div>
               </div>
-            </div>
-
           </div>
 
         </div>
@@ -276,22 +273,22 @@
     <!-- footer -->
 
     <div id="footer">
-
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-6">
                     <div class="infoblock">
                         <!-- About Widget -->
-                        <h2 class="font-accident-one-bold">HTML Template</h2>
-                        <p>Electronic HTML Template is the fastest way to build your own attractive website.</p>
+                        <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
+                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
 
-                        <p>Contrast, classic and colorful variations are available in the downloadable archive.</p>
+                        <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
+                            annoying really motorist with my caravan</p>
 
-                        <p>Just upload the creative template to your hosting and get the working website right now.</p>
                         <!-- / About Widget -->
                     </div>
                 </div>
-
                 <div class="col-sm-3">
                     <div class="infoblock">
                         <!-- Contacts Widget -->
@@ -299,17 +296,21 @@
                         <div class="contact">
                             <div class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-home"></i></div>
-                                <div class="addr-text">12345, Direct Drive - 110, Daytona Beach, Florida, USA </div>
+                                <div class="addr-text">
+                                    87 Coleman Road<br/>
+                                    London<br/>
+                                    SE5 7TF
+                                </div>
                             </div>
                             <div class="dividewhite1"></div>
                             <div class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-phone"></i></div>
-                                <div class="addr-text">1 234 567 67 45</div>
+                                <div class="addr-text">07974 198959</div>
                             </div>
                             <div class="dividewhite1"></div>
                             <div     class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-envelope"></i></div>
-                                <div class="addr-text"><a href="mailto:info@electronicteam.com">info@electronicteam.com</a></div>
+                                <div class="addr-text"><a href="mailto:info@electronicteam.com">jolyon.wharton@webenabled.tv</a></div>
                             </div>
                         </div>
                         <!-- / Contacts Widget -->
@@ -318,39 +319,30 @@
 
                 <div class="col-sm-3">
                     <div class="infoblock">
-                        <!-- Flickr feed Widget -->
-                        <h2 class="font-accident-one-bold">flickr feed</h2>
-                        <ul id="basicuse" class="thumbs"></ul>
-                        <!-- / Flickr feed Widget -->
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="infoblock">
                         <!-- Follow us Widget -->
-                        <h2 class="font-accident-one-bold">Follow us</h2>
+                        <h2 class="font-accident-one-bold">Social</h2>
                         <div class="follow">
-                            <div class="follow-element">
-                                <div class="follow-icon"><i class="fa fa-twitter"></i></div>
-                                <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">twitter</a></div>
-                                    <div class="follow-numb">324</div>
-                                </div>
-                            </div>
-                            <div class="dividewhite1"></div>
-                            <div class="follow-element">
-                                <div class="follow-icon"><i class="fa fa-facebook"></i></div>
-                                <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">facebook</a></div>
-                                    <div class="follow-numb">653</div>
-                                </div>
-                            </div>
-                            <div class="dividewhite1"></div>
                             <div class="follow-element">
                                 <div class="follow-icon"><i class="fa fa-linkedin"></i></div>
                                 <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">linkedin</a></div>
-                                    <div class="follow-numb">234</div>
+                                    <div class="follow-social"><a href="https://www.linkedin.com/in/jolysoft">LinkedIn</a></div>
+                                    <div class="follow-numb">11</div>
+                                </div>
+                            </div>
+                            <div class="dividewhite1"></div>
+                            <div class="follow-element">
+                                <div class="follow-icon"><i class="fa fa-stack-overflow"></i></div>
+                                <div class="follow-descr">
+                                    <div class="follow-social"><a href="http://stackoverflow.com/users/780861/jolysoft">Stack Overflow</a></div>
+                                    <div class="follow-numb">781</div>
+                                </div>
+                            </div>
+                            <div class="dividewhite1"></div>
+                            <div class="follow-element">
+                                <div class="follow-icon"><i class="fa fa-github"></i></div>
+                                <div class="follow-descr">
+                                    <div class="follow-social"><a href="https://github.com/jolySoft">GitHub</a></div>
+                                    <div class="follow-numb">1</div>
                                 </div>
                             </div>
                         </div>
@@ -359,38 +351,14 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row partners">
-                <div class="col-xs-1"><img src="assets/custom/images/partners_01.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_02.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_03.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_04.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_05.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_06.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_07.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_08.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_09.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_10.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_11.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_12.png" class="img-responsive" alt="x"></div>
-            </div>
-        </div>
-
     </div>
     <div id="copyrights-wrapper">
         <div class="container">
-            <div class="copyright">
-                <div class="copy-attrs"> © 2014 <a href="http://neuethemes.net">Neuethemes</a>. All rights reserved</div>
-                <div class="copy-link">
-                    <a href="http://neuethemes.net">Legal Notice</a>
-                </div>
-                <div class="copy-link">
-                    <a href="http://neuethemes.net">Terms & Conditions</a>
-                </div>
+            <div class="copyright wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+                <div class="copy-attrs"> © 2015 <a href="http://neuethemes.net" target="_blank">WebEnabled Consultancy Ltd</a>. All rights reserved</div>
             </div>
         </div>
     </div>
-
     <!-- /footer -->
 
     <!-- Back to Top -->
