--- a/views/index.ejs
+++ b/views/index.ejs
@@ -451,11 +451,11 @@
             <figure class="effect-goliath captions">
               <img src="/images/double-helex.jpg" alt="img03"/>
               <figcaption>
-                <a href="portfolio-item.html">View more</a>
+                <a href="/stratmed">View more</a>
               </figcaption>
             </figure>
               <div class="portfolio-caption">
-                  <h4 class="font-accident-one-normal uppercase"><a hred="#">CRUK | StratMed</a></h4>
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/stratmed">CRUK | StratMed</a></h4>
                   <p>Gene matching software for clinical trials</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
@@ -470,11 +470,11 @@
             <figure class="effect-goliath captions">
               <img src="/images/dogs.jpg" alt="img11"/>
               <figcaption>
-                <a href="portfolio-item.html">View more</a>
+                <a href="/bento">View more</a>
               </figcaption>
             </figure>
               <div class="portfolio-caption">
-                  <h4 class="font-accident-one-normal uppercase"><a hred="#">BetClearer | Bento</a></h4>
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/bento">BetClearer | Bento</a></h4>
                   <p>Betting brokage platform for spread betting</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
@@ -490,11 +490,11 @@
             <figure class="effect-goliath captions">
               <img src="/images/racing-horse.jpg" alt="img03"/>
               <figcaption>
-                <a href="portfolio-item.html">View more</a>
+                <a href="/siseditor">View more</a>
               </figcaption>
             </figure>
               <div class="portfolio-caption">
-                  <h4 class="font-accident-one-normal uppercase"><a hred="#">SIS | Editor</a></h4>
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/siseditor">SIS | Editor</a></h4>
                   <p>Betting feed manipulator for Dog and horse racing</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
@@ -510,11 +510,11 @@
             <figure class="effect-goliath captions">
               <img src="/images/webenabled-site.jpg" alt="img11"/>
               <figcaption>
-                  <a href="portfolio-item.html">View more</a>
+                  <a href="/website">View more</a>
               </figcaption>
             </figure>
               <div class="portfolio-caption">
-                  <h4 class="font-accident-one-normal uppercase"><a hred="#">WebEnabled | Website</a></h4>
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/website">WebEnabled | Website</a></h4>
                   <p>This website and how it was built</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
@@ -530,11 +530,11 @@
             <figure class="effect-goliath captions">
               <img src="/images/node-tracker-logo.jpg" alt="img03"/>
               <figcaption>
-                <a href="portfolio-item.html">View more</a>
+                <a href="/nodetracker">View more</a>
               </figcaption>
             </figure>
               <div class="portfolio-caption">
-                  <h4 class="font-accident-one-normal uppercase"><a hred="#">Node | Tracker</a></h4>
+                  <h4 class="font-accident-one-normal uppercase"><a hred="/nodetracker">Node | Tracker</a></h4>
                   <p>Marine mammal tracking platform</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
