--- a/public/assets/custom/scss/style.css
+++ b/public/assets/custom/scss/style.css
@@ -149,7 +149,7 @@
     top: 0;
     left: 0;
     background-color: #e8e8e8;
-    background: url("../../../images/ship-bow.jpg") no-repeat center center;
+    background: url("../../../images/ship-bow-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
@@ -165,7 +165,7 @@
     top: 0;
     left: 0;
     background-color: #e8e8e8;
-    background: url("../images/section-bg02.jpg") no-repeat center center;
+    background: url("../../../images/double-helex-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
@@ -181,7 +181,7 @@
     top: 0;
     left: 0;
     background-color: #e8e8e8;
-    background: url("../images/section-bg03.jpg") no-repeat center center;
+    background: url("../../../images/dogs-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
@@ -197,7 +197,7 @@
     top: 0;
     left: 0;
     background-color: #e8e8e8;
-    background: url("../images/section-bg04.jpg") no-repeat center center;
+    background: url("../../../images/racing-horse-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
@@ -213,7 +213,23 @@
     top: 0;
     left: 0;
     background-color: #e8e8e8;
-    background: url("../images/section-bg05.jpg") no-repeat center center;
+    background: url("../../../images/WorkLondon.jpg") no-repeat center center;
+    background-size: cover;
+    will-change: transform;
+    z-index: -1; }
+
+.e-bg-section06 {
+  overflow: hidden;
+  position: relative; }
+  .e-bg-section06::before {
+    content: ' ';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #e8e8e8;
+    background: url("../../../images/Killer-Whale-Patrol.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform;
     z-index: -1; }
