--- a/public/assets/custom/scss/style.scss
+++ b/public/assets/custom/scss/style.scss
@@ -298,7 +298,7 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../../../images/ship-bow.jpg") no-repeat center center;
+    background: url("../../../images/ship-bow-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
@@ -315,7 +315,7 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../images/section-bg02.jpg") no-repeat center center;
+    background: url("../../../images/double-helex-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
@@ -332,7 +332,7 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../images/section-bg03.jpg") no-repeat center center;
+    background: url("../../../images/dogs-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
@@ -349,7 +349,7 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../images/section-bg04.jpg") no-repeat center center;
+    background: url("../../../images/racing-horse-big.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
@@ -366,7 +366,24 @@ $accentcolor: #ff9900;
     top: 0;
     left: 0;
     background-color: $bg-light;
-    background: url("../images/section-bg05.jpg") no-repeat center center;
+    background: url("../../../images/WorkLondon.jpg") no-repeat center center;
+    background-size: cover;
+    will-change: transform; // creates a new paint layer
+    z-index: -1;
+  }
+}
+.e-bg-section06 {
+  overflow: hidden; // added for pseudo-element
+  position: relative; // added for pseudo-element
+  &::before {
+    content: ' ';
+    position: fixed; // instead of background-attachment
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $bg-light;
+    background: url("../../../images/Killer-Whale-Patrol.jpg") no-repeat center center;
     background-size: cover;
     will-change: transform; // creates a new paint layer
     z-index: -1;
