--- a/views/stratmed.ejs
+++ b/views/stratmed.ejs
@@ -13,44 +13,40 @@
     <meta name="keywords" content="html5, template, css3, creative, portfolio, website, blog, personal, corporative, design, e-commerce, shop, store, design, modern, responsive, bootstrap, slider, masonry ">
 
     <!-- CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css"                     rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/fontawesome/css/font-awesome.css"                    rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/novecento/css/novecento-font.css"                    rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/fancybox/css/jquery.fancybox.css?v=2.1.5"            rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/fancybox/css/jquery.fancybox-buttons.css?v=1.0.5"    rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/flexslider/css/flexslider.css"                       rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/vendor/feather/css/feather.css"                             rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/custom/css/style.css"                                       rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/custom/css/style_contrast.css"                              rel="stylesheet" type="text/css" media="screen" id="colors" />
+    <link href="/assets/vendor/bootstrap/css/bootstrap.min.css"                     rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/fontawesome/css/font-awesome.css"                    rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/novecento/css/novecento-font.css"                    rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/fancybox/css/jquery.fancybox.css?v=2.1.5"            rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/fancybox/css/jquery.fancybox-buttons.css?v=1.0.5"    rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/flexslider/css/flexslider.css"                       rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/vendor/feather/css/feather.css"                             rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/custom/css/style.css"                                      rel="stylesheet" type="text/css" media="screen" />
+    <link href="/assets/custom/css/style_contrast.css"                              rel="stylesheet" type="text/css" media="screen" id="colors" />
 
 
      <!-- JS -->
      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"                      type="text/javascript"></script>
-     <script src="assets/vendor/sticky/js/jquery.sticky.js"                         type="text/javascript"></script>
-     <script src="assets/vendor/mousewheel/js/jquery.mousewheel-3.0.6.pack.js"      type="text/javascript"></script>
-     <script src="assets/vendor/fancybox/js/jquery.fancybox.pack.js?v=2.1.5"        type="text/javascript"></script>
-     <script src="assets/vendor/fancybox/js/jquery.fancybox-buttons.js?v=1.0.5"     type="text/javascript"></script>
-     <script src="assets/vendor/fancybox/js/jquery.fancybox-media.js?v=1.0.6"       type="text/javascript"></script>
-     <script src="assets/vendor/superfish/js/hoverIntent.js"                        type="text/javascript"></script>
-     <script src="assets/vendor/superfish/js/superfish.js"                          type="text/javascript"></script>
-     <script src="assets/vendor/superfish/js/supersubs.js"                          type="text/javascript"></script>
-     <script src="assets/vendor/flickr/js/jflickrfeed.min.js"                       type="text/javascript"></script>
-     <script src="assets/vendor/flexslider/js/jquery.flexslider-min.js"             type="text/javascript"></script>
-     <script src="assets/vendor/flickity/js/flickity.pkgd.min.js"                   type="text/javascript"></script>
-     <script src="assets/vendor/stellar/js/jquery.stellar.min.js"                   type="text/javascript"></script>
-     <script src="assets/vendor/isotope/js/jquery.isotope.min.js"                   type="text/javascript"></script>
-     <script src="assets/vendor/imagesloaded/js/imagesloaded.pkgd.min.js"           type="text/javascript"></script>
-     <script src="assets/vendor/modernizr/js/modernizr.js"                          type="text/javascript"></script>
+     <script src="/assets/vendor/bootstrap/js/bootstrap.min.js"                      type="text/javascript"></script>
+     <script src="/assets/vendor/sticky/js/jquery.sticky.js"                         type="text/javascript"></script>
+     <script src="/assets/vendor/mousewheel/js/jquery.mousewheel-3.0.6.pack.js"      type="text/javascript"></script>
+     <script src="/assets/vendor/fancybox/js/jquery.fancybox.pack.js?v=2.1.5"        type="text/javascript"></script>
+     <script src="/assets/vendor/fancybox/js/jquery.fancybox-buttons.js?v=1.0.5"     type="text/javascript"></script>
+     <script src="/assets/vendor/fancybox/js/jquery.fancybox-media.js?v=1.0.6"       type="text/javascript"></script>
+     <script src="/assets/vendor/superfish/js/hoverIntent.js"                        type="text/javascript"></script>
+     <script src="/assets/vendor/superfish/js/superfish.js"                          type="text/javascript"></script>
+     <script src="/assets/vendor/superfish/js/supersubs.js"                          type="text/javascript"></script>
+     <script src="/assets/vendor/flickr/js/jflickrfeed.min.js"                       type="text/javascript"></script>
+     <script src="/assets/vendor/flexslider/js/jquery.flexslider-min.js"             type="text/javascript"></script>
+     <script src="/assets/vendor/flickity/js/flickity.pkgd.min.js"                   type="text/javascript"></script>
+     <script src="/assets/vendor/stellar/js/jquery.stellar.min.js"                   type="text/javascript"></script>
+     <script src="/assets/vendor/isotope/js/jquery.isotope.min.js"                   type="text/javascript"></script>
+     <script src="/assets/vendor/imagesloaded/js/imagesloaded.pkgd.min.js"           type="text/javascript"></script>
+     <script src="/assets/vendor/modernizr/js/modernizr.js"                          type="text/javascript"></script>
      <script src="https://maps.google.com/maps/api/js?sensor=false"                 type="text/javascript"></script>
-     <script src="assets/custom/js/script.js"                                       type="text/javascript"></script>
-
-
+     <script src="/assets/custom/js/script.js"                                       type="text/javascript"></script>
 
     <!-- Fonts -->
      <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-
-
   </head>
   <body>
 
@@ -67,7 +63,7 @@
     <!-- /sub-top -->
 
     <!-- main-top -->
-    <header id="header-wrapper" class="sticky-menu-light e-bg-section01">
+    <header id="header-wrapper" class="sticky-menu-light e-bg-section02">
 
        <div class="sticky-header header-light" role="navigation">
           <div class="container">
@@ -103,10 +99,11 @@
        <div class="container">
           <div id="page-title">
 				 <div class="page-title-details">
-					 <h1 class="font-accident-one-light">Portfolio Item</h1>
+					 <h1 class="font-accident-one-light">Gene Matching Platform</h1>
 					 <ul>
-						 <li><a href="#">Home</a>&nbsp;&nbsp;&nbsp;/</li>
-						 <li>Portfolio Item</li>
+						 <li>Angular</li>
+                         <li>/</li>
+						 <li>TypeScript</li>
 					 </ul>
 				 </div>
           </div>
@@ -123,7 +120,7 @@
         <div class="container">
 
           <h2 class="font-accident-one-bold uppercase">
-            Some Web-design Project
+            CRUK | StratMed
           </h2>
           <div class="dividewhite2"></div>
 
@@ -279,22 +276,22 @@
     <!-- footer -->
 
     <div id="footer">
-
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-6">
                     <div class="infoblock">
                         <!-- About Widget -->
-                        <h2 class="font-accident-one-bold">HTML Template</h2>
-                        <p>Electronic HTML Template is the fastest way to build your own attractive website.</p>
+                        <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
+                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
 
-                        <p>Contrast, classic and colorful variations are available in the downloadable archive.</p>
+                        <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
+                            annoying really motorist with my caravan</p>
 
-                        <p>Just upload the creative template to your hosting and get the working website right now.</p>
                         <!-- / About Widget -->
                     </div>
                 </div>
-
                 <div class="col-sm-3">
                     <div class="infoblock">
                         <!-- Contacts Widget -->
@@ -302,17 +299,21 @@
                         <div class="contact">
                             <div class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-home"></i></div>
-                                <div class="addr-text">12345, Direct Drive - 110, Daytona Beach, Florida, USA </div>
+                                <div class="addr-text">
+                                    87 Coleman Road<br/>
+                                    London<br/>
+                                    SE5 7TF
+                                </div>
                             </div>
                             <div class="dividewhite1"></div>
                             <div class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-phone"></i></div>
-                                <div class="addr-text">1 234 567 67 45</div>
+                                <div class="addr-text">07974 198959</div>
                             </div>
                             <div class="dividewhite1"></div>
                             <div     class="footer-addr">
                                 <div class="footer-icon"><i class="fa fa-envelope"></i></div>
-                                <div class="addr-text"><a href="mailto:info@electronicteam.com">info@electronicteam.com</a></div>
+                                <div class="addr-text"><a href="mailto:info@electronicteam.com">jolyon.wharton@webenabled.tv</a></div>
                             </div>
                         </div>
                         <!-- / Contacts Widget -->
@@ -321,39 +322,30 @@
 
                 <div class="col-sm-3">
                     <div class="infoblock">
-                        <!-- Flickr feed Widget -->
-                        <h2 class="font-accident-one-bold">flickr feed</h2>
-                        <ul id="basicuse" class="thumbs"></ul>
-                        <!-- / Flickr feed Widget -->
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="infoblock">
                         <!-- Follow us Widget -->
-                        <h2 class="font-accident-one-bold">Follow us</h2>
+                        <h2 class="font-accident-one-bold">Social</h2>
                         <div class="follow">
-                            <div class="follow-element">
-                                <div class="follow-icon"><i class="fa fa-twitter"></i></div>
-                                <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">twitter</a></div>
-                                    <div class="follow-numb">324</div>
-                                </div>
-                            </div>
-                            <div class="dividewhite1"></div>
-                            <div class="follow-element">
-                                <div class="follow-icon"><i class="fa fa-facebook"></i></div>
-                                <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">facebook</a></div>
-                                    <div class="follow-numb">653</div>
-                                </div>
-                            </div>
-                            <div class="dividewhite1"></div>
                             <div class="follow-element">
                                 <div class="follow-icon"><i class="fa fa-linkedin"></i></div>
                                 <div class="follow-descr">
-                                    <div class="follow-social"><a href="#">linkedin</a></div>
-                                    <div class="follow-numb">234</div>
+                                    <div class="follow-social"><a href="https://www.linkedin.com/in/jolysoft">LinkedIn</a></div>
+                                    <div class="follow-numb">11</div>
+                                </div>
+                            </div>
+                            <div class="dividewhite1"></div>
+                            <div class="follow-element">
+                                <div class="follow-icon"><i class="fa fa-stack-overflow"></i></div>
+                                <div class="follow-descr">
+                                    <div class="follow-social"><a href="http://stackoverflow.com/users/780861/jolysoft">Stack Overflow</a></div>
+                                    <div class="follow-numb">781</div>
+                                </div>
+                            </div>
+                            <div class="dividewhite1"></div>
+                            <div class="follow-element">
+                                <div class="follow-icon"><i class="fa fa-github"></i></div>
+                                <div class="follow-descr">
+                                    <div class="follow-social"><a href="https://github.com/jolySoft">GitHub</a></div>
+                                    <div class="follow-numb">1</div>
                                 </div>
                             </div>
                         </div>
@@ -362,34 +354,11 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row partners">
-                <div class="col-xs-1"><img src="assets/custom/images/partners_01.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_02.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_03.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_04.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_05.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_06.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_07.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_08.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_09.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_10.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_11.png" class="img-responsive" alt="x"></div>
-                <div class="col-xs-1"><img src="assets/custom/images/partners_12.png" class="img-responsive" alt="x"></div>
-            </div>
-        </div>
-
     </div>
     <div id="copyrights-wrapper">
         <div class="container">
-            <div class="copyright">
-                <div class="copy-attrs"> © 2014 <a href="http://neuethemes.net">Neuethemes</a>. All rights reserved</div>
-                <div class="copy-link">
-                    <a href="http://neuethemes.net">Legal Notice</a>
-                </div>
-                <div class="copy-link">
-                    <a href="http://neuethemes.net">Terms & Conditions</a>
-                </div>
+            <div class="copyright wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s">
+                <div class="copy-attrs"> © 2015 <a href="http://neuethemes.net" target="_blank">WebEnabled Consultancy Ltd</a>. All rights reserved</div>
             </div>
         </div>
     </div>
